# herdr-file-viewer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml  constitution.md  herdr-plugin.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: markdown-style.json
docs/: README.md  configuration.md  install.md  keys.md  manual-verification.md  renderers.md  summoning.md  usage.md  windows.md
docs/adr/: 0002-single-in-process-tui.md  (+1 more)
scripts/: fetch-or-build.ps1  fetch-or-build.sh  install-renderers.sh  open-file-viewer-tab.ps1  open-file-viewer-tab.sh  open-file-viewer.ps1  open-file-viewer.sh
src/: annotation.rs  app.rs  config.rs  context.rs  controller.rs  document.rs  editor.rs  finder.rs  fuzzy.rs  git.rs  help.rs  herdr.rs  highlight.rs  host.rs  index.rs  infile.rs  input.rs  intent.rs  launch.rs  lib.rs  main.rs  open_target.rs  opener.rs  picker.rs  presenter.rs  proc.rs  prompt.rs  render.rs  root.rs  search.rs  text_layout.rs  tree.rs  view_policy.rs  worktree.rs
tests/: annotations.rs  ci_workflow.rs  cli_smoke.rs  controller.rs  controller_async.rs  docs_consistency.rs  e2e_annotations.rs  e2e_editor.rs  e2e_help.rs  e2e_keyboard.rs  e2e_nongit.rs  e2e_open_target.rs  editor.rs  fetch_or_build.rs  git_baseline.rs  git_status.rs  herdr.rs  highlight.rs  host_context.rs  index_perf.rs  launcher_content.rs  launcher_ps1.rs  lineselect.rs  manifest.rs  presenter.rs  presenter_narrow.rs  release_workflow.rs  render_delegate.rs  render_escape.rs  render_perf.rs  reroot.rs  reveal_open.rs  root.rs  search.rs  search_integration.rs  search_perf.rs  tempdir_sweep.rs  tree.rs  tree_filters.rs  tree_perf.rs  (+2 more)
(+42 files in other folders)
