[package]
name = "herdr-file-viewer"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "A git-aware, read-only file viewer that runs as a herdr TUI pane"
license = "MIT"

[lib]
name = "herdr_file_viewer"
path = "src/lib.rs"

[[bin]]
name = "herdr-file-viewer"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.1"
crossterm = "0.29.0"
ansi-to-tui = "8.0.1"
ignore = "0.4.26"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
insta = "1.48.0"
expectrl = "0.9.0"
